[gd_scene load_steps=12 format=2]

[ext_resource path="res://Droplet.gd" type="Script" id=1]
[ext_resource path="res://Assets/drop1.png" type="Texture" id=2]
[ext_resource path="res://Assets/drop2.png" type="Texture" id=3]
[ext_resource path="res://Assets/drop3.png" type="Texture" id=4]
[ext_resource path="res://Assets/drop4.png" type="Texture" id=5]
[ext_resource path="res://Assets/drop5.png" type="Texture" id=6]
[ext_resource path="res://Assets/drop7.png" type="Texture" id=7]
[ext_resource path="res://Assets/drop8.png" type="Texture" id=8]
[ext_resource path="res://Assets/drop6.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": false,
"name": "idle",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.4114, 24.4454 )

[node name="Droplet" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.115509, 1.50166 )
shape = SubResource( 2 )

[node name="DelayTimer" type="Timer" parent="."]
one_shot = true

[node name="Timer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.115509, 1.50166 )
shape = SubResource( 2 )
[connection signal="timeout" from="DelayTimer" to="." method="_on_DelayTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
